# rust-utils

./: Cargo.toml  README.md
.github/workflows/: release_to_production.yml
release-script/: Cargo.toml
release-script/src/: git_manager.rs  main.rs
src/: lib.rs
src/api_clients/: errors.rs  graphql_client.rs  mod.rs  rest_client.rs
src/auth/: extract_user_id.rs  get_user_email_from_token.rs  mod.rs
src/utils/: time.rs
