[package]
name = "various-rust-utils"
version = "0.1.2"
edition = "2021"
authors = ["Dino Bikic <bikic.dino@gmail.com>"]
license = "MIT"
description = "Some helpers for rust projects"
readme = "README.md"
homepage = "https://github.com/dbikic/various-rust-utils"
repository = "https://github.com/dbikic/various-rust-utils"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
biscuit = "0.5.0"
chrono = "0.4"
crossterm = "0.22.1"
graphql_client = "0.10.0"
thiserror = "1.0.30"

[dependencies.reqwest]
features = ["json"]
optional = false
version = "0.11.9"

[dependencies.serde]
features = ["derive"]
optional = false
version = "1.0"

